syntax = "proto3";

option java_package = "backend.keumbang.grpc";
option java_outer_classname = "AuthProto";
option java_multiple_files=true;

service AuthService {
  rpc Auth(AuthRequest) returns (AuthResponse);
}

// 요청 객체
message AuthRequest {
  string accessToken = 1;
}

// 응답 객체
message AuthResponse {
  bool isValid = 1;
  string username = 2;
  string role = 3;
}
